# bootcamp

./: README.md  index.html  markdown_cheatsheet.md  my_notes.md
Basics/: README.md
Dataflow_Framework/abstraction-lvl-1/: README.md  input.md  out.md  out.txt  process.py
Dataflow_Framework/abstraction-lvl-2/: README.md  main.py  output.txt
Dataflow_Framework/abstraction-lvl-3/: README.md  cli.py  core.py  main.py  pipeline.py  processor_types.py
Dataflow_Framework/abstraction-lvl-4/: README.md  cli.py  core.py  main.py  pipeline.py  pipeline.yaml  processor_types.py
Dataflow_Framework/abstraction-lvl-5/: README.md  cli.py  main.py  pipeline.py  pipeline.yaml  processor_types.py  routing.py
Dataflow_Framework/abstraction-lvl-6/: README.md  cli.py  config.yaml  input.txt  router.py
Dataflow_Framework/abstraction-lvl-7/: cli.py  config.yaml  input.txt
Day 0/: README.md
Figure captian extractor/: Access System Architecture.md  README.md  config.py  dependency.md  deployment diagram.md  docker deployment.md  extracted_data.db  key components.md  malformed_pubmed_xml.xml  paper_data.duckdb  paper_data.sqlite  pmc_PMC3535000_native.xml  pmc_PMC4260604_native.xml  pmc_PMC7782049_native.xml  sample.xml  sample_pubtator3_pmc_export.xml
Language-drills/7. performance_debug/5 Packaging with pyproject.toml/1_minimal_project_file.pyproject.toml/: pyproject.toml
day 1/: daily_log.md  hello.py  login_sequence.md
day 2/7. performance_debug/5 Packaging with pyproject.toml/2_define_entry_point.py/: pyproject.toml
persistence-drills/: Questions.md
(+65 files in other folders)
